<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#ffffff">
     
  <RelativeLayout
        android:id="@+id/relativeLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:background="#005353" 
        android:paddingBottom="10dp">

        <Button
            android:id="@+id/btn_bac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/back" />

        <TextView
            android:id="@+id/headin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/viewheading"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff" />

    </RelativeLayout>
    
     
     <Spinner
        android:id="@+id/spinviewatt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
     
        android:hint="@string/edt_studentname" >
  </Spinner>
   <LinearLayout 
       android:orientation="horizontal"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content">
     
     <TextView android:layout_height="wrap_content"
    android:layout_width="70dp"
    android:layout_weight="5"
    android:id="@+id/tvtotalmonthclasses2"
    android:textColor="@color/black"
 android:textSize="15sp"
 android:paddingBottom="10dp"

   android:text="@string/c"/>

<TextView android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:id="@+id/tvtot2"
 android:layout_weight="2"
    android:textSize="15sp"
    android:padding="10dp"
    
   android:gravity="left"
    android:textColor="@color/black"
    android:text="@string/view"/>   
     </LinearLayout>

  <include layout="@layout/threerow"/>
  
    <ListView
        android:id="@+id/viewattendance"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
      >
    </ListView>
</LinearLayout>
