 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/white">

    <TextView
        android:id="@+id/col_txt1"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
  android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:text="@string/roll"
        android:layout_weight="1"/>
 <TextView
        android:id="@+id/col_txt2"
        android:layout_width="70dp"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_weight="5"
        android:textColor="@color/black" />
    
    <TextView
        android:id="@+id/col_txt3"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="right"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
         android:text="@string/count"/>
    
   <!--  <TextView
        android:id="@+id/col_txt4"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="@string/Totalclasses"
        android:layout_gravity="right"
        android:layout_weight="1"
        android:gravity="right"
        android:textColor="@color/black"
        /> -->
   <!--  
    <TextView
        android:id="@+id/col_txt5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view"
        android:textColor="@color/black"
        android:layout_weight="1"
        />
 -->
   
</LinearLayout>
