<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:background="#005353" 
        android:paddingBottom="10dp">

        <Button
            android:id="@+id/btn_back2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/back" />

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/manageb"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff" />
    </RelativeLayout>

    

    <Spinner
        android:id="@+id/spin_delbatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/bt_clearbatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt_delbatch"
        
        android:layout_marginLeft="80dp"
        android:text="@string/clearb" />
    <Button
        android:id="@+id/bt_delbatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spin_delbatch"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="80dp"
        android:text="@string/deleteBATCH" />

</RelativeLayout>