<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

   <RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:background="#005353"
    android:paddingBottom="10dp">
 
    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:layout_alignParentLeft="true" />

    

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/deleteSTUDENT"
        android:layout_marginTop="10dp"
        android:textColor="#ffffff"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>

<LinearLayout android:orientation="horizontal"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">
    
    <TextView android:text="@string/tv_batch"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
   
    <Spinner
        android:id="@+id/spsel_batch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
<LinearLayout android:orientation="horizontal"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">
    
    <TextView android:text="@string/tv_rollno"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
    <Spinner
        android:id="@+id/spsel_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
</LinearLayout>
    
    <Button
        android:id="@+id/bt_deletestudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteSTUDENT" />

</LinearLayout>
